structmeta-tests/tests/compile_fail/struct_meta/missing_unnamed_argument_inner.stderr
error: unexpected end of input, this attribute takes least 2 arguments but 1 argument was supplied
 --> $DIR/missing_unnamed_argument_inner.rs:1:60
  |
1 | #[structmeta_tests::attr_requred_unnamed_param2_inner(value(10), after = 20)]
  |                                                            ^^^^
